[package]
name = "illu-logi"
version = "0.1.0"
authors = ["gyouzasushi <tasukuishikawa@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
wasm-bindgen = "0.2.80"
