[package]
name = "illu-logi"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = {version="0.1.7",optional=true}
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.10.3"
js-sys = "0.3.57"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
wasm-bindgen = "0.2.80"
wee_alloc = { version="0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Document", "Element", "HtmlElement", "Window", "console",
]
